--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-    <h1>Game page</h1>
-
+    
+    <canvas id="canvas"></canvas>
+    
 
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="./index.js"></script>
