--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="">
+    <style>
+        body {
+          margin: 0;
+          padding: 0;
+        }
+        canvas {
+            width: 100%;
+        }
+  
+       
+      </style>
 </head>
 <body>
 
